# 4D_camera

./: CMakeLists.txt  README.md  build.sh
shaders/: simple.fs  simple3D.vs  simple4D.vs
src/: main.cpp  obj3D.hpp  obj4D.hpp
src/objects/: obj_base.cpp  obj_base.hpp  object4D.hpp  object_base.hpp  objects.cpp  objects.hpp
src/opengl/: camera3D.cpp  camera3D.hpp  camera4D.cpp  camera4D.hpp  shader.cpp  shader.hpp
